k8s/ri-booking-api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ri-booking-api
  namespace: demo
  labels:
    k8s-app: ri-booking-api
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: ri-booking-api
  template:
    metadata:
      labels:
        k8s-app: ri-booking-api
    spec:
      containers:
      - name: ri-booking-api
        image: registry.cma.d.ip6n.net:4433/ri-booking-api:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 800m
            memory: 1100Mi
          requests:
            cpu: 200m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 5
