k8s/ri-booking-api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ri-booking-api
  namespace: demo
  labels:
    k8s-app: ri-booking-api
spec:
  selector:
    k8s-app: ri-booking-api
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
